@@ -5,25 +5,22 @@ import java.io.BufferedReader;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.InputStreamReader;
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.List;
-import java.util.Objects;
+import java.util.*;
 
 public class Utils {
 
     public static List<String> readInputFromResources(String fileName)  {
-        List<String> lines = new ArrayList<>();
+        final List<String> lines = new ArrayList<>();
 
-        try (InputStream is = Utils.class.getClassLoader().getResourceAsStream(fileName)) {
-            BufferedReader br = new BufferedReader(new InputStreamReader(Objects.requireNonNull(is)));
+        try (final InputStream is = Utils.class.getClassLoader().getResourceAsStream(fileName)) {
+            final BufferedReader br = new BufferedReader(new InputStreamReader(Objects.requireNonNull(is)));
 
             String line;
             while((line = br.readLine()) != null) {
                 lines.add(line);
             }
             
-        } catch (IOException e) {
+        } catch (final IOException e) {
             throw new IllegalArgumentException(String.format("Could not load file %s", fileName));
         }
 
@@ -74,13 +71,16 @@ public class Utils {
                 .toList();
     }
 
+    // Array grid operations
+    // -----------------------------------
+
     public static char[][] as2dArray(List<String> input) {
         if (input.isEmpty()) { return new char[0][0]; }
 
-        int height = input.size();
-        int width  = input.get(0).length();
+        final int height = input.size();
+        final int width  = input.getFirst().length();
 
-        char [][] array = new char[height][width];
+        final char [][] array = new char[height][width];
         for (int i = 0; i < input.size(); i++) {
             array[i] = input.get(i).toCharArray();
         }
@@ -90,18 +90,24 @@ public class Utils {
     public static char[][] arrayCopy(char[][] that) {
         if (that.length == 0) { return new char[0][0]; }
 
-        char[][] copy = new char[that.length][that[0].length];
+        final char[][] copy = new char[that.length][that[0].length];
         for (int y = 0; y < that.length; y++) {
             System.arraycopy(that[y], 0, copy[y], 0, that[y].length);
         }
         return copy;
     }
 
+    public static boolean isWithinBounds(char[][] array2d, Point position) {
+        final int x = position.x;
+        final int y = position.y;
+        return 0 <= y && 0 <= x && y < array2d.length && x < array2d[y].length;
+    }
+
     public static char[][] insertColumnAtPos(char[][] array, int pos, char defaultValue) {
         if (pos < 0 || pos > array.length) { throw new ArrayIndexOutOfBoundsException(pos); }
-        char[][] copy = new char[array.length][];
+        final char[][] copy = new char[array.length][];
         for (int y = 0; y < array.length; y++) {
-            char[] newRow = new char[array[y].length + 1];
+            final char[] newRow = new char[array[y].length + 1];
             newRow[pos] = defaultValue;
             System.arraycopy(array[y], 0, newRow, 0, pos);
             System.arraycopy(array[y], pos, newRow, pos + 1, array[y].length - pos);
@@ -113,13 +119,12 @@ public class Utils {
     public static char[][] insertRowAtPos(char[][] array, int pos, char defaultValue) {
         if (pos < 0 || pos > array.length) { throw new ArrayIndexOutOfBoundsException(pos); }
 
-        char[][] copy = new char[array.length + 1][array[0].length];
+        final char[][] copy = new char[array.length + 1][array[0].length];
         System.arraycopy(array, 0, copy, 0, pos);
         System.arraycopy(array, pos,      copy, pos + 1, array.length - pos);
         Arrays.fill(copy[pos], defaultValue);
         return copy;
     }
-
 
     public static void replaceCharacters(char [][] array2d, List<Point> coordinates, char newChar) {
         for (Point coords : coordinates) {
@@ -127,11 +132,32 @@ public class Utils {
         }
     }
 
+    public static Map<Character, List<Point>> uniqueCharsInArray2d(char[][] array2d) {
+        final Map<Character, List<Point>> map = new HashMap<>();
+        for (int y = 0; y < array2d.length; y++) {
+            for (int x = 0; x < array2d[y].length; x++) {
+                map.computeIfAbsent(array2d[y][x], _ -> new ArrayList<>()).add(new Point(x, y));
+            }
+        }
+        return map;
+    }
+
     @SuppressWarnings("unused")
     public static void print2dArray(char [][] array2d) {
         for (char[] chars : array2d) {
             System.out.println(new String(chars));
         }
+    }
+
+    // Maths
+    // -----------------------------------
+
+    public static Point positionVector(Point a, Point b) {
+        return new Point((b.x - a.x), (b.y - a.y));
+    }
+
+    public static Point addVector(Point a, Point vec) {
+        return new Point((a.x + vec.x), (a.y + vec.y));
     }
 
 }
